[package]
name = "ats-intc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
log = "0.4.17"
spin = { version = "0.9", optional = true }

ats-intc-pac = { path = "./ats-intc-pac"}


[features]

task-as-usize = []

default = []




